Overflow Fix

--- a/src/main.less
+++ b/src/main.less
@@ -113,7 +113,7 @@ div#react {
           border-radius: @font-size * 0.25;
           margin-top: @line-height * 0.25;
           padding: 0 @line-height * 0.25;
-          overflow: scroll;
+          overflow: auto;
           p, div {
             background: transparent;
           }
